# transatlancair

./: .gitignore  BUILD.bazel  README.md  WORKSPACE  get_dem_data.sh  load_flights.py  move_unused_dems.py  pipeline.bzl  plot_map.py  plot_profiles.py
data/N77ZG_flight_logs/: Flt1158_10-07-21p.csv  Flt1159_10-07-21f.csv  Flt1160_10-07-21p.csv  Flt1161_10-07-21f.csv  Flt1162_10-07-21p.csv  Flt1163_10-07-21p.csv  Flt1164_10-08-21f.csv  Flt1165_10-08-21f.csv  Flt1166_10-08-21p.csv  Flt1167_10-08-21p.csv  Flt1168_10-09-21f.csv  Flt1169_10-09-21p.csv  Flt1170_10-09-21p.csv  Flt1171_10-09-21f.csv  Flt1172_10-09-21p.csv  Flt1173_10-09-21f.csv  Flt1174_10-09-21r.csv  Flt1175_10-09-21p.csv  Flt1176_10-12-21r.csv  Flt1177_10-12-21p.csv  Flt1179_10-14-21f.csv  Flt1180_10-14-21f.csv  Flt1181_10-14-21f.csv  Flt1182_10-17-21f.csv  Flt1183_10-17-21p.csv  Flt1184_10-20-21f.csv  Flt1185_10-21-21f.csv  Flt1186_10-21-21p.csv  Flt1187_10-21-21f.csv  Flt1188_10-21-21f.csv  Flt1189_10-21-21p.csv  Flt1190_10-21-21f.csv  Flt1191_10-21-21r.csv  Flt1192_10-22-21f.csv  Flt1193_10-22-21f.csv  Flt1194_10-22-21f.csv  Flt1195_10-23-21p.csv  Flt1196_10-23-21p.csv  Flt1197_10-23-21p.csv  Flt1198_10-23-21p.csv
data/dem/: .gitignore
data/dem/TOPOBATHY_SAN_FRANCISCO_ELEV_METERS/: .gitignore
data/dem/gebco_2021/: .gitignore
data/dem/unused/: .gitignore
src/meshtools/: BUILD.bazel  llh2ecef.cpp  ply2stl.cpp  roundtrip_stl.cpp  scale_stl.cpp  size_stl.cpp  stl.cpp  stl.hpp
